Add arrow plugin